BRN experiment v1